--- a/app/assets/stylesheets/components/_profile_card.scss
+++ b/app/assets/stylesheets/components/_profile_card.scss
@@ -1,6 +1,15 @@
 .profile-card {
 	border-bottom: 1px solid #f4f6f9;
 	padding: 16px;
+  height: 320px;
+  display: flex;
+  flex-direction: column;
+
+  .profile-card-avatar {
+    object-fit: contain;
+    @extend .rounded-square;
+    box-shadow: 0px 3px 6px -2px rgba(50, 51, 9, .1);
+  }
 
 	&:nth-child(odd) {
 		border-right: 1px solid#f4f6f9;
