--- a/app/views/profiles/_card.html.erb
+++ b/app/views/profiles/_card.html.erb
@@ -12,40 +12,45 @@
 
     <%= link_to profile_path(profile) do %>
       <% if profile.user.avatar.attached? %>
-        <%= image_tag profile.user.avatar.service_url, alt: "profile avatar", width: 64, height: 64 %>
+        <%= image_tag profile.user.avatar.service_url, alt: "profile avatar", width: 64, height: 64, class: "profile-card-avatar" %>
       <% else %>
-        <%= image_tag "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_160x56dp.png", alt: "profile avatar", height: 64, width: 64 %>
+        <%= image_tag "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_160x56dp.png", alt: "profile avatar", height: 64, width: 64, class: "profile-card-avatar" %>
       <% end %>
     <% end %>
 
     <button class="action"><%= image_tag "icons/more.svg", alt: "more", class: "icon" %></button>
   </div>
-  <div class="bottom">
-    <%= link_to profile_path(profile) do %>
-      <div class="text-group">
-        <h3 class="name"><%= profile.user.display_name %></h3>
-        <h5 class="profession"><%= profile.profession %></h5>
-        <p class="location"><%= profile.location %></p>
-      </div>
-    <% end %>
-
-    <% if conversation %>
-      <%= link_to conversation_path(conversation), class: "btn btn-white mt-3" do %>
-        <%= image_tag "icons/message.svg", alt: "message" %> Message
+  <div class="bottom flex-grow-1 flex flex-column justify-content-between">
+    <div class="bottom-top flex-grow-1">
+      <%= link_to profile_path(profile), class: "h-100" do %>
+        <div class="text-group flex flex-column justify-content-between h-100">
+          <h3 class="name"><%= profile.user.display_name %></h3>
+          <h5 class="profession"><%= profile.profession %></h5>
+          <p class="location"><%= profile.location %></p>
+        </div>
       <% end %>
-    <% else %>
-      <%= link_to profile_conversations_path(profile, conversation: { profile_id: profile.id }), method: :post, class: "btn btn-white mt-3" do %>
-        <%= image_tag "icons/message.svg", alt: "message" %> Message
-      <% end %>
-    <% end %>
-    <div class="flex items-center justify-content-center mt-3">
-      <% profile.average_rating.to_i.times do %>
-        <%= image_tag "icons/colored-rating.svg", alt: "rating", class: "star" %>
-      <% end %>
-      <% (5 - profile.average_rating.to_i).times do %>
-        <%= image_tag "icons/rating.svg", alt: "rating", class: "star" %>
-      <% end %>
-      <span class="rating-size">(<%= profile.ratings.size %>)</span>
     </div>
+
+    <div class="bottom-bottom">
+      <% if conversation %>
+        <%= link_to conversation_path(conversation), class: "btn btn-white mt-3" do %>
+          <%= image_tag "icons/message.svg", alt: "message" %> Message
+        <% end %>
+      <% else %>
+        <%= link_to profile_conversations_path(profile, conversation: { profile_id: profile.id }), method: :post, class: "btn btn-white mt-3" do %>
+          <%= image_tag "icons/message.svg", alt: "message" %> Message
+        <% end %>
+      <% end %>
+      <div class="flex items-center justify-content-center mt-3">
+        <% profile.average_rating.to_i.times do %>
+          <%= image_tag "icons/colored-rating.svg", alt: "rating", class: "star" %>
+        <% end %>
+        <% (5 - profile.average_rating.to_i).times do %>
+          <%= image_tag "icons/rating.svg", alt: "rating", class: "star" %>
+        <% end %>
+        <span class="rating-size">(<%= profile.ratings.size %>)</span>
+      </div>
+    </div>
+
   </div>
 </div>
