new color, button style, and utility

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -4,8 +4,7 @@ input[type="submit"] {
 	@extend .no-decoration;
 	border: none;
 	background: transparent;
-  -webkit-tap-highlight-color: transparent;
-
+	-webkit-tap-highlight-color: transparent;
 
 	&.btn {
 		display: block;
@@ -38,6 +37,10 @@ input[type="submit"] {
 
 	&.btn-float {
 		background: transparent;
+
+		&.red {
+			color: $flat-red-2;
+		}
 	}
 
 	&[disabled] {
