--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,6 +3,7 @@
 @import "button";
 @import "booking_card";
 @import "booking_form";
+@import "filter";
 @import "input";
 @import "message";
 @import "navbar";
