--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -17,6 +17,7 @@ $flat-brown-5: #cbbdbd;
 $flat-green-3: #1ed7a6;
 $flat-green-5: #d3f7ed;
 
+$flat-red-2: #cc383c;
 $flat-red-3: #ff464b;
 $flat-red-5: #ffdcdd;
 
