--- a/app/views/connections/destroy.js.erb
+++ b/app/views/connections/destroy.js.erb
@@ -8,5 +8,5 @@
   bookButton.dataset["remote"] = true;
   bookButton.dataset["method"] = "post";
   bookButton.rel = "nofollow";
-  bookButton.innerHTML = `<img alt="Add to network" src=${addPersonIconPath}><p class="textWhite">ADD</p>`;
+  bookButton.innerHTML = `<img alt="Add to network" src="${addPersonIconPath}"><p class="textWhite">ADD</p>`;
 })();
