--- a/app/views/profiles/_filter_content.html.erb
+++ b/app/views/profiles/_filter_content.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="h-100">
   <section class="head">
     <button class="filter-exit"><%= image_tag "icons/cross.svg", alt: "close" %></button>
     <p>FILTER</p>
