--- a/app/views/pages/_manager_dashboard.html.erb
+++ b/app/views/pages/_manager_dashboard.html.erb
@@ -1,24 +1,51 @@
-<div class="manager-dashboard-actions">
-  <div class="flex items-center">
-    <%= link_to new_user_invitation_path, class: "flex items-center" do %>
-      Email invite
-      <%= image_tag "icons/mail", alt: "Invite a freelancer" %>
-    <% end %>
-  </div>
-  <%= link_to "Browse flxibl", profiles_path %>
-</div>
+<div id="manager">
+  <div class="shadow-alt rounded p-3">
+    <h3 class="mt-0 mb-1">Bookings</h3>
+    <p class="subtitle m-0"><%= @booked_profiles.count %> bookings across <%= @booked_profiles.distinct.count("profiles.id") %> freelancers</p>
 
-<section class="jobs">
-  <div class="active-jobs">
-    <div class="flex justify-content-between items-center">
-      <h3>Active job posts</h3>
-      <%= link_to "View all", jobs_path(manager_id: current_user.manager.id) %>
+    <div class="booking-card-container flex items-center justify-content-between">
+      <div class="flex items-center">
+        <div class="booking-card accepted">
+          <%= image_tag "icons/checkmark", alt: "active bookings" %>
+        </div>
+        <div class="ml-2">
+          <h4 class="title m-0">Accepted</h4>
+          <p class="subtitle m-0"><%= @bookings.accepted.count %> bookings</p>
+        </div>
+      </div>
+      <%= link_to "#" do %>
+        <%= image_tag "icons/right-arrow.svg", alt: "accepted bookings" %>
+      <% end %>
     </div>
 
-    <div>
-      <% current_user.manager.jobs.order(:created_at).limit(3).each do |job| %>
-        <%= render partial: "jobs/card", locals: { job: job } %>
+    <div class="booking-card-container flex items-center justify-content-between">
+      <div class="flex items-center">
+        <div class="booking-card pending">
+          <%= image_tag "icons/pending.svg", alt: "pending bookings" %>
+        </div>
+        <div class="ml-2">
+          <h4 class="m-0">Pending</h4>
+          <p class="subtitle m-0"><%= @bookings.pending.count %> bookings</p>
+        </div>
+      </div>
+      <%= link_to "#" do %>
+        <%= image_tag "icons/right-arrow.svg", alt: "pending bookings" %>
+      <% end %>
+    </div>
+
+    <div class="booking-card-container flex items-center justify-content-between">
+      <div class="flex items-center">
+        <div class="booking-card rejected">
+          <%= image_tag "icons/cross-white.svg", alt: "rejected bookings" %>
+        </div>
+        <div class="ml-2">
+          <h4 class="m-0">Rejected</h4>
+          <p class="subtitle m-0"><%= @bookings.rejected.count %> bookings</p>
+        </div>
+      </div>
+      <%= link_to "#" do %>
+        <%= image_tag "icons/right-arrow.svg", alt: "rejected bookings" %>
       <% end %>
     </div>
   </div>
-</section>
+</div>
