--- a/app/assets/stylesheets/config/utilities/_display.scss
+++ b/app/assets/stylesheets/config/utilities/_display.scss
@@ -94,6 +94,10 @@
 	box-shadow: 0px 0px 16px 4px rgba(50, 42, 91, 0.08);
 }
 
+.shadow-alt {
+	box-shadow: 0px 6px 36px rgba(59, 74, 116, 0.2);
+}
+
 .rounded {
 	border-radius: 8px;
 }
