--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,4 +1,41 @@
 #dashboardPage {
+	#manager {
+		p.subtitle {
+			font-size: 14px;
+		}
+
+		.booking-card-container {
+			@extend .py-2, .px-3, .rounded, .my-3;
+
+			background-color: $blueish-gray;
+
+			.booking-card {
+				@extend .rounded-circle,
+					.p-2,
+					.flex,
+					.justify-content-center,
+					.items-center;
+
+				&.accepted {
+					background: $flat-green-3;
+				}
+
+				&.pending {
+					background: $flat-yellow-3;
+				}
+
+				&.rejected {
+					background: $flat-red-2;
+				}
+
+				img {
+					height: 24px;
+					width: 24px;
+				}
+			}
+		}
+	}
+
 	.jobs {
 		.active-jobs {
 			.job-card {
