--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -4,12 +4,12 @@
 			font-size: 14px;
 		}
 
-		.booking-card-container {
+		.card-container {
 			@extend .py-2, .px-3, .rounded, .my-3;
 
 			background-color: $blueish-gray;
 
-			.booking-card {
+			.card {
 				@extend .rounded-circle,
 					.p-2,
 					.flex,
