--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,4 +1,11 @@
 #dashboardPage {
+	h1 {
+		@extend .uppercase;
+
+		font-weight: 500;
+		font-size: 20px;
+	}
+
 	#manager {
 		p.subtitle {
 			font-size: 14px;
