--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -12,6 +12,8 @@ $blue-2: #4c5fef;
 $blue-3: #4888ff;
 $blueish-gray: #f4f6f9;
 
+$flat-dark-5: #140f26;
+
 $flat-brown-5: #cbbdbd;
 
 $flat-green-3: #1ed7a6;
