--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -1,3 +1,52 @@
-<div class="mx-3">
-  <h1 class="text-center">TODO THIS PAGE</h1>
+<div class="mx-3 job-edit">
+  <div class="flex justify-content-between items-center px-3">
+    <%= link_to :back do %>
+      <%= image_tag "icons/left-arrow.svg", alt: "back button", width: 16, height: 16 %>
+    <% end %>
+    <h3>Edit job</h3>
+    <button><%= image_tag "icons/more.svg", alt: "search", width: 16, height: 16 %></button>
+  </div>
+
+  <section>
+    <%= simple_form_for @job do |f| %>
+      <%= f.input :profession, required: false,
+                  label: "Job title", label_html: { class: "mb-1" },
+                  wrapper_html: { class: "flex flex-column mb-3" } %>
+      <%= f.input :description, required: false,
+                  label_html: { class: "mb-1" },
+                  wrapper_html: { class: "flex flex-column mb-3" },
+                  input_html: { rows: 5 } %>
+      <%= f.input :skill_list, label: "Key skills",
+                  wrapper_html: { class: "flex flex-column mb-3" } %>
+      <%= f.input :expertise, collection: Job.expertises.map { |ex| [ex[0].capitalize, ex[0]] },
+                  wrapper_html: { class: "flex flex-column mb-3" },
+                  required: false %>
+      <%= f.input :location, placeholder: "London, United Kingdom",
+                  wrapper_html: { class: "flex flex-column mb-3" },
+                  required: false %>
+      <!-- TODO: Add checkbox here with JS functionality that toggles show/hide of date & time columns -->
+      <div class="flex">
+        <%= f.input :start_time, as: :time, html5: true,
+                    wrapper_html: { class: "flex flex-column mb-3 mr-3" } %>
+        <%= f.input :end_time, as: :time, html5: true,
+                    wrapper_html: { class: "flex flex-column mb-3" } %>
+      </div>
+      <div class="flex">
+        <%= f.input :start_date, as: :date, html5: true,
+                    wrapper_html: { class: "flex flex-column mb-3 mr-3" } %>
+        <%= f.input :end_date, as: :date, html5: true,
+                    wrapper_html: { class: "flex flex-column mb-3" } %>
+      </div>
+      <!-- TODO: Add checkbox here with JS functionality that toggles show/hide of date & time columns -->
+      <div class="flex">
+        <%= f.input :rate, label: "Max budget", placeholder: "$250",
+                    wrapper_html: { class: "flex flex-column mb-3 mr-3" },
+                    required: false %>
+        <%= f.input :price_type, collection: Job.price_types.map { |ex| [ex[0].capitalize, ex[0]] }, wrapper_html: { class: "flex flex-column mb-3" } %>
+      </div>
+      <%= f.input :attachments, as: :file, input_html: { multiple: true } %>
+      <%= f.submit "Update Job", class: "btn btn-primary w-100 my-3 py-2" %>
+    <% end %>
+
+  </section>
 </div>
