--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -5,6 +5,7 @@
 @import "home";
 @import "jobs_index";
 @import "jobs_new";
+@import "job_edit";
 @import "job_show";
 @import "managers_new";
 @import "profile_show";
