--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -24,17 +24,36 @@
       <%= f.input :location, placeholder: "London, United Kingdom",
                   wrapper_html: { class: "flex flex-column mb-3" },
                   required: false %>
-      <!-- TODO: Add checkbox here with JS functionality that toggles show/hide of date & time columns -->
-      <div class="flex">
-        <%= f.input :start_time, as: :time, html5: true,
-                    wrapper_html: { class: "flex flex-column mb-3 mr-3" } %>
-        <%= f.input :end_time, as: :time, html5: true,
-                    wrapper_html: { class: "flex flex-column mb-3" } %>
+      <div class="flex justify-content-between items-end mb-3">
+        <div class="bookingSpecific flex flex-column">
+          <label for="job_start_date">Hours per day</label>
+          <div class="flex">
+            <%= f.input :start_time, as: :time, html5: true,
+                        label: false,
+                        wrapper_html: { class: "flex flex-column" } %>
+            <span class="self-centered mx-2"> - </span>
+            <%= f.input :end_time, as: :time, html5: true,
+                        label: false,
+                        wrapper_html: { class: "flex flex-column" } %>
+          </div>
+        </div>
+        <div class="bookingDuration none">
+          <%= f.input :duration,
+                      wrapper_html: { class: "flex flex-column" } %>
+        </div>
+        <div class="profileTabs flex-grow-1 textSm mr-0" id="tabs">
+          <%= link_to "Duration", "#", id: "duration", class: "tab", data: { turbolinks: false } %>
+          <%= link_to "Specific", "#", id: "specific", class: "tab active", data: { turbolinks: false } %>
+        </div>
       </div>
       <div class="flex">
-        <%= f.input :start_date, as: :date, html5: true,
+        <div class="dates-input-wrapper">
+          <label for="dates" class="block textGray">Dates</label>
+          <input type="text" name="dates" class="mb-2 w-100 datepicker">
+        </div>
+        <%= f.input :start_date, as: :hidden,
                     wrapper_html: { class: "flex flex-column mb-3 mr-3" } %>
-        <%= f.input :end_date, as: :date, html5: true,
+        <%= f.input :end_date, as: :hidden,
                     wrapper_html: { class: "flex flex-column mb-3" } %>
       </div>
       <!-- TODO: Add checkbox here with JS functionality that toggles show/hide of date & time columns -->
@@ -47,6 +66,5 @@
       <%= f.input :attachments, as: :file, input_html: { multiple: true } %>
       <%= f.submit "Update Job", class: "btn btn-primary w-100 my-3 py-2" %>
     <% end %>
-
   </section>
 </div>
