--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -6,6 +6,7 @@
 @import "jobs_index";
 @import "jobs_new";
 @import "job_show";
+@import "mail";
 @import "managers_new";
 @import "profile_show";
 @import "profiles_index";
