change to alt shadow

--- a/app/views/pages/mail.html.erb
+++ b/app/views/pages/mail.html.erb
@@ -7,7 +7,7 @@
     <button style="width: 16px; height: 16px;"> </button>
   </section>
 
-  <section id="content" class="bg-white rounded-lg shadow mx-3 p-4 flex flex-column justify-content-center items-center">
+  <section id="content" class="bg-white rounded-lg shadow-alt mx-3 p-4 flex flex-column justify-content-center items-center">
     <%= image_tag "icons/new-mail.svg", alt: "new mail image", width: 300 %>
     <h1 class="mt-0 textDarkOne">You've got mail</h1>
     <p class="textLightBlack text-center">You should have received an email with a unique link to sign in</p>
