--- a/app/views/pages/_manager_dashboard.html.erb
+++ b/app/views/pages/_manager_dashboard.html.erb
@@ -48,7 +48,7 @@
       <% end %>
     </div>
 
-    <%= link_to "View all (#{@bookings.count})", "#", class: "btn btn-primary text-center" %>
+    <%= link_to "View all (#{@bookings.count})", bookings_path, class: "btn btn-primary text-center" %>
   </div>
 
   <div class="shadow-alt rounded p-3">
