--- a/app/assets/stylesheets/config/utilities/_display.scss
+++ b/app/assets/stylesheets/config/utilities/_display.scss
@@ -97,7 +97,7 @@
 .shadow-alt {
 	box-shadow: 0px 6px 36px rgba(59, 74, 116, 0.2);
 }
-  
+
  .opaque {
 	opacity: 0;
 }
@@ -185,4 +185,12 @@
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.border-box {
+  box-sizing: border-box;
 }
