--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,48 +1,85 @@
-<h1>Edit your profile</h1>
+<div class="profileEdit w-100">
 
-<h2>1. Personal details</h2>
+  <div class="step-1">
+    <%= simple_form_for @profile do |f| %>
+      <div class="profileBanner flex items-center justify-content-center relative" style="background-image: linear-gradient(0deg, rgba(255, 255, 255, 0.56), rgba(255, 255, 255, 0.56)), url(<%= avatar_url(@profile) %>)">
+        <div class="headerOptions flex w-100 justify-content-between p-3">
+          <div>
+            <%= link_to profile_path(@profile) do %>
+              <%= image_tag "icons/cross-white.svg", alt: "back link", width: 24, height: 24, class: "mr-2 textSm" %>
+            <% end %>
+          </div>
+        </div>
+          <%= f.simple_fields_for :user do |f| %>
+        <div class="camera">
+            <%= f.input :avatar, as: :file, input_html: { class: 'none'}, label_html: { class: 'upload-photo'}, label: "#{(image_tag 'icons/camera', id: 'camera-icon', width: 32, height: 32)}".html_safe, required: false %>
+        </div>
+      </div>
 
-<%= simple_form_for @profile do |f| %>
+      <div class="profileHeader">
+          <%= f.input :first_name, required: false, label_html: { class: "textGray mt-3 block" }, input_html: { value: @profile.user.first_name, class: "w-100 mt-2 border-box lg" }, wrapper_html: { class: "pr-3"} %>
+          <%= f.input :last_name, required: false, label_html: { class: "textGray mt-3 block" }, input_html: { value: @profile.user.last_name, class: "w-100 mt-2 border-box lg" }, wrapper_html: { class: "pl-3 overflow-hidden"} %>
+        <% end %>
+      </div>
 
-  <%= f.simple_fields_for :profile_user do |ff| %>
-    <%= ff.input :avatar, as: :file %>
-    <%= ff.input :first_name %>
-    <%= ff.input :last_name %>
+      <%= f.input :profession, required: false, label_html: { class: "textGray mt-3 block" }, input_html: { class: "w-100 mt-2 border-box lg" }, wrapper_html: { class: "profession-edit px-3 overflow-hidden"} %>
+
+      <%= f.input :expertise, label: "Experience level", required: false, label_html: { class: "textGray mt-3 block" }, input_html: { class: "w-100 mt-2 border-box lg", id: "edit_profile_expertise" }, wrapper_html: { class: "px-3 overflow-hidden"}, collection: Profile::EXPERTISES %>
+
+      <%= f.input :skill_list, label: "Key skills (max 5, comma separated)", required: false, label_html: { class: "textGray mt-3 block" }, input_html: { class: "w-100 mt-2 border-box lg", value: "#{@profile.skill_list.join(", ")}" }, wrapper_html: { class: "px-3 overflow-hidden"} %>
+
+
+      <%= f.input :location, required: false, label_html: { class: "textGray mt-3 block" }, input_html: { class: "w-100 mt-2 border-box lg"}, wrapper_html: { class: "px-3 overflow-hidden"} %>
+      <div class="flex justify-content-end p-3 items-center">
+        <button class="next-step" type="button"><%= image_tag "icons/arrow-right.svg", alt: "submit", width: 16, height: 16 %></button>
+      </div>
+  </div>
+  <!-- End of Step 1 -->
+
+  <!-- Step 2 -->
+  <div class="step-2 flex none flex-column h-100 justify-content-between">
+    <div class="step-content h-100 mb-5">
+      <%= link_to profile_path(@profile) do %>
+        <%= image_tag "icons/cross.svg", alt: "back link", width: 24, height: 24, class: "mr-2 textSm p-3 mt-3" %>
+      <% end %>
+      <%= f.input :overview, as: :text, label: "Professional Summary", required: false, label_html: { class: "textGray mt-3 block" }, input_html: { class: "w-100 h-100 mt-2 border-box lg" }, wrapper_html: { class: "px-3"}  %>
+
+      <label class="p-3 text optional textGray block">Links and documents</label>
+        <div class="links">
+          <%= f.simple_fields_for :profile_links do |paf| %>
+            <%= paf.input :title, placeholder: "Ex: Curriculum Vitae", input_html: {name: "profile[profile_documents][][title]"}  %>
+            <%= paf.input :url, placeholder: "https://", input_html: {name: "profile[profile_links][][url]"} %>
+          <% end %>
+
+          <div class=""><label id="add-a-link" class="choose-file textGray"> <%= image_tag("icons/zap", alt: "zap", class: "mr-2") %> ADD A LINK</label></div>
+
+        </div>
+      <div class="or-separator flex w-100 justify-content-center items-center">
+        <div class="line"></div>
+        <p>OR</p>
+        <div class="line"></div>
+      </div>
+
+      <%= f.input :attachments, label_html: { id: "upload-a-document", class: "choose-file textGray" }, as: :file, input_html: { multiple: true, class: "none" }, label: "#{image_tag("icons/paperclip", alt: "paperclip", class: "mr-2")} UPLOAD DOCUMENT".html_safe %>
+
+      <div class="px-3 mt-4">
+        <%= f.button :button, class: "btn btn-primary my-3 save w-100" do %>
+          <%= image_tag("icons/save", alt: "save", class: "mr-2") %>
+          SAVE
+        <% end %>
+      </div>
+
+    </div>
+    <!-- End of step 2 content -->
+    <div class="flex justify-content-between p-3">
+      <button class="previous-step" type="button"><%= image_tag "icons/left-arrow-blue.svg", alt: "submit", width: 16, height: 16 %>
+    </div>
+  </div>
+
+  <div class="flex justify-content-center items-center step-indicator-wrapper minus-30">
+    <div class="step-indicator step-indicator-1 active"><%= image_tag "icons/step-circle.svg", alt: "step indicator", width: 8, height: 8 %></div>
+    <div class="step-indicator step-indicator-2"><%= image_tag "icons/step-circle.svg", alt: "step indicator", width: 8, height: 8 %></div>
+  </div>
   <% end %>
 
-  <%= f.input :location %>
-
-  <h2>2. Professional details:</h2>
-
-  <%= f.input :profession %>
-
-  <%= f.input :expertise, collection: Profile::EXPERTISES, label: "Experience level:"%>
-
-  <%= f.input :skill_list, label: "Key skills (max 5, comma separated)" %>
-  <%= f.input :overview, label: "Professional summary:", as: :text  %>
-
-  <h2>3. Links and documents</h2>
-
-  <%= f.simple_fields_for :profile_links do |paf| %>
-    <%= paf.input :title, input_html: {name: "profile[profile_links][][title]"} %>
-    <%= paf.input :url, placeholder: "https://", input_html: {name: "profile[profile_links][][url]"} %>
-    <%= link_to "+ Add another link", "#" %>
-  <% end %>
-
-  <br>
-  <br>
-  <br>
-
-  <%= f.simple_fields_for :profile_documents do |paf| %>
-    <%= paf.input :title, placeholder: "Ex: Curriculum Vitae", input_html: {name: "profile[profile_documents][][title]"}  %>
-    <%= paf.input :attachment, as: :file, input_html: {name: "profile[profile_documents][][attachment]"} %>
-    <%= link_to "Upload another document", "#" %>
-  <% end %>
-
-
-  <br>
-  <br>
-  <br>
-
-  <%= f.submit %>
-<% end %>
+</div>
