--- a/app/assets/stylesheets/config/utilities/_spacing.scss
+++ b/app/assets/stylesheets/config/utilities/_spacing.scss
@@ -47,6 +47,16 @@
 	@extend .mr-2, .ml-2;
 }
 
+.mx-4 {
+	margin-left: 32px;
+	margin-right: 32px;
+}
+
+.mx-5 {
+	margin-left: 64px;
+	margin-right: 64px;
+}
+
 .mb-1 {
 	margin-bottom: 4px;
 }
@@ -143,11 +153,11 @@
 }
 
 .mb-4 {
-  margin-bottom: 32px;
+	margin-bottom: 32px;
 }
 
 .my-4 {
-  @extend .mt-4, .mb-4;
+	@extend .mt-4, .mb-4;
 }
 
 .mt-5 {
@@ -282,5 +292,5 @@
 }
 
 .p-0 {
-  padding: 0 !important;
+	padding: 0 !important;
 }
