--- a/app/assets/stylesheets/pages/_schedule.scss
+++ b/app/assets/stylesheets/pages/_schedule.scss
@@ -64,7 +64,8 @@ $day-header-height: 60px;
 						.flex-column,
 						.items-center,
 						.justify-content-center,
-						.px-1;
+						.px-1,
+						.text-center;
 
 					img {
 						width: 48px;
