--- a/app/assets/stylesheets/pages/_profile_edit.scss
+++ b/app/assets/stylesheets/pages/_profile_edit.scss
@@ -95,5 +95,27 @@
       width: 32px;
     }
   }
+
+  #links-modal, #documents-modal {
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    z-index: 1;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    form {
+      @extend .rounded;
+      padding: 64px 32px;
+      background-color: white;
+      img {
+        left: 16px;
+        top: 16px;
+        position: absolute;
+      }
+    }
+  }
 }
 
