--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -10,7 +10,7 @@
             <% end %>
           </div>
         </div>
-          <%= f.simple_fields_for :user do |f| %>
+          <%= f.simple_fields_for :profile_user do |f| %>
         <div class="camera">
             <%= f.input :avatar, as: :file, input_html: { class: 'none'}, label_html: { class: 'upload-photo'}, label: "#{(image_tag 'icons/camera', id: 'camera-icon', width: 32, height: 32)}".html_safe, required: false %>
         </div>
@@ -43,30 +43,93 @@
         <%= image_tag "icons/cross.svg", alt: "back link", width: 24, height: 24, class: "mr-2 textSm p-3 mt-3" %>
       <% end %>
       <%= f.input :overview, as: :text, label: "Professional Summary", required: false, label_html: { class: "textGray mt-3 block" }, input_html: { class: "w-100 h-100 mt-2 border-box lg" }, wrapper_html: { class: "px-3"}  %>
+    <% end %>
+    <!-- End of the main form -->
+
 
       <label class="p-3 text optional textGray block">Links and documents</label>
-        <div class="links">
-          <%= f.simple_fields_for :profile_links do |paf| %>
-            <%= paf.input :title, placeholder: "Ex: Curriculum Vitae", input_html: {name: "profile[profile_documents][][title]"}  %>
-            <%= paf.input :url, placeholder: "https://", input_html: {name: "profile[profile_links][][url]"} %>
+
+      <!-- Links Modal -->
+      <div class="none" id="links-modal">
+        <%= simple_form_for [@profile, ProfileAttachment.new], html: { class: "relative" }, remote: true do |paf| %>
+          <%= image_tag "icons/cross.svg", alt: "back link", width: 16, height: 16, class: "mr-2 textSm", id: "close-links" %>
+          <%= paf.input :title, required: true, label_html: { class: "textGray mt-3 block" }, input_html: { class: "w-100 h-100 mt-2 border-box lg" }, wrapper_html: { class: "px-3"} %>
+          <%= paf.input :url, placeholder: "https://", required: true, label_html: { class: "textGray mt-3 block" }, input_html: { class: "w-100 h-100 mt-2 border-box lg" }, wrapper_html: { class: "px-3"} %>
+          <div class="p-3">
+            <%= paf.submit "Save link", class: "btn btn-white"%>
+          </div>
+        <% end %>
+      </div>
+
+      <!-- Link Buttons -->
+      <div class="links-list p-3">
+        <% unless @links.empty? %>
+          <h3 class=""><small class="textGray">LINKS</small></h3>
+          <% @links.each do |link| %>
+            <%= link_to sanitize_url(link.url), target: :_blank, class: "btn-centered btn-secondary mb-3 flex items-center justify-content-center" do  %>
+            <%= image_tag "icons/edit-white", alt: "edit", class: "mr-2", height: 32, width: 32 %>
+            <%= link.title&.capitalize %>
+            <% end %>
           <% end %>
+        <% end %>
+      </div>
+      <!-- Add another link -->
+      <div class="mb-3">
+        <label class="choose-file textGray" id="add-a-link">
+          <%= image_tag("icons/zap", alt: "zap", class: "mr-2") %>
+          ADD <%= @links.any? ? "ANOTHER" : "A LINK" %>
+        </label>
+      </div>
 
-          <div class=""><label id="add-a-link" class="choose-file textGray"> <%= image_tag("icons/zap", alt: "zap", class: "mr-2") %> ADD A LINK</label></div>
-
-        </div>
-      <div class="or-separator flex w-100 justify-content-center items-center">
+      <!-- OR separator -->
+      <div class="my-4 or-separator flex w-100 justify-content-center items-center">
         <div class="line"></div>
         <p>OR</p>
         <div class="line"></div>
       </div>
 
-      <%= f.input :attachments, label_html: { id: "upload-a-document", class: "choose-file textGray" }, as: :file, input_html: { multiple: true, class: "none" }, label: "#{image_tag("icons/paperclip", alt: "paperclip", class: "mr-2")} UPLOAD DOCUMENT".html_safe %>
+      <!-- Documents Modal -->
+      <div class="none" id="documents-modal">
+        <%= simple_form_for [@profile, ProfileAttachment.new], html: { class: "relative" }, remote: true do |paf| %>
+          <%= image_tag "icons/cross.svg", alt: "back link", width: 16, height: 16, class: "mr-2 textSm", id: "close-documents" %>
+          <%= paf.input :title, required: true, label_html: { class: "textGray mt-3 block" }, input_html: { class: "w-100 h-100 mt-2 border-box lg" }, wrapper_html: { class: "px-3"} %>
+          <%= paf.input :attachment, as: :file, required: true, label_html: { class: "textGray mt-3 block" }, input_html: { class: "w-100 h-100 mt-2 border-box lg" }, wrapper_html: { class: "px-3"} %>
+          <div class="p-3">
+            <%= paf.submit "Save document", class: "btn btn-white"%>
+          </div>
+        <% end %>
+      </div>
 
-      <div class="px-3 mt-4">
-        <%= f.button :button, class: "btn btn-primary my-3 save w-100" do %>
+      <!-- Documents buttons -->
+
+      <div class="documents-list px-3 pb-3">
+        <% unless @documents.empty? %>
+          <h3 class=""><small class="textGray">DOCUMENTS</small></h3>
+          <% @documents.each do |link| %>
+            <%= link_to download_attachment_path(link), method: :post, class: "btn-centered btn-secondary mb-3 flex items-center justify-content-center" do %>
+            <%= image_tag "icons/download-white", width: 32, height: 32, class: "mr-2" %>
+            <%= link.title&.capitalize %>
+            <% end %>
+          <% end %>
+        <% end %>
+      </div>
+
+      <!-- Add another document -->
+      <div>
+        <label class="choose-file textGray" id="upload-a-document">
+          <%= image_tag("icons/paperclip", alt: "paperclip", class: "mr-2") %>
+          UPLOAD <%= @documents.any? ? "ANOTHER" : "DOCUMENT" %>
+        </label>
+      </div>
+
+      <div class="px-3 mt-5">
+
+        <!-- TODO: STYLE THIS BUTTON TO MATCH FIGMA  -->
+
+        <button type="submit" form="edit_profile_<%= @profile.id %>" class="btn btn-primary my-3 save w-100" />
           <%= image_tag("icons/save", alt: "save", class: "mr-2") %>
           SAVE
-        <% end %>
+        </button>
       </div>
 
     </div>
@@ -80,6 +143,5 @@
     <div class="step-indicator step-indicator-1 active"><%= image_tag "icons/step-circle.svg", alt: "step indicator", width: 8, height: 8 %></div>
     <div class="step-indicator step-indicator-2"><%= image_tag "icons/step-circle.svg", alt: "step indicator", width: 8, height: 8 %></div>
   </div>
-  <% end %>
 
 </div>
