--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,4 +1,5 @@
 // Import page-specific CSS files here.
+@import "booking_edit";
 @import "conversations_index";
 @import "conversations_show";
 @import "dashboard";
