structure for edit booking page

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -3,7 +3,7 @@
     <%= link_to :back do %>
       <%= image_tag "icons/left-arrow.svg", alt: "back", class: "icon", height: 16, width: 16 %>
     <% end %>
-    <p class="textDarkGray">NEW BOOKING</p>
+    <p class="textDarkGray">Bookings</p>
     <button style="height: 16px; width: 16px"> </button>
   </section>
 
