--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -14,6 +14,7 @@
     <% end %>
     <p><strong><% @booking.billable? ? "Billable" : "Non-billable" %></strong></p>
     <p><strong>Price:</strong> $<%= @booking.price %> - <%= @booking.price_type %></p>
+    <%= link_to "Edit booking", edit_booking_path(@booking) %>
     <div>
       <% if @booking.attachments.attached? %>
         <% @booking.attachments.each do |attachment| %>
